[tool.poetry]
name = "ha-lexent-polpero"
version = "0.1.0"
description = "Home Assistant HACS integration for the Lexent Polperro 30L dehumidifier"
license = "MIT"
authors = []
packages = [{include = "custom_components"}]

[tool.poetry.dependencies]
python = "^3.12"
polpero = {git = "https://github.com/hypercubian/lexent-polpero-py.git", tag = "v0.1.0"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-bdd = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
bandit = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
detect-secrets = "*"
docformatter = "*"
pyupgrade = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
warn_unreachable = true
show_error_context = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polpero", "polpero.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.isort]
profile = "black"
known_third_party = ["polpero", "homeassistant", "voluptuous"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B110"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "functional: marks tests as functional tests",
    "bdd: marks tests as BDD tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
